# ramscan

./: .envrc  .gitignore  .prettierignore  Makefile  README.md  allowJavaScriptModules.ts  manage.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
.meteor/: .id  packages  versions
client/: main.html  main.scss
imports/api/: methods.ts
imports/db/: clicks.ts  currentBooks.ts  docs.ts  files.ts  scans.ts
imports/types/: book.ts
imports/ui/: App.tsx  Book.tsx  BookPage.tsx  Clicker.tsx  Doc.tsx  Hello.tsx  Home.tsx  Link.tsx  Nav.tsx  PagePage.tsx  Progress.tsx  Routes.tsx  Swipeable.tsx  hooks.ts
ramscan/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: nginx.conf  nginx.conf.template  nginx.sh  run.sh  scan.sh  scanbd-action.sh
server/: api.ts  main.ts  methods.ts  publish.ts  sync.ts  util.ts
tests/: main.ts
