[tool.poetry]
name = "ramscan"
version = "0.1.0"
description = ""
authors = ["Jeremy Fleischman <jeremyfleischman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
django = "^3.1.5"
channels = "^3.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
